--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,6 @@ before_install: gem install bundler -v 1.10.2
 install:
   - ./bin/setup
 script:
+  - git config --global user.name "Travis User"
+  - git config --global user.email "travisuser@example.com"
   - bundle exec rake test
