--- a/test/fixtures/fizzbuzz/Rakefile
+++ b/test/fixtures/fizzbuzz/Rakefile
@@ -2,7 +2,7 @@ require 'rake/testtask'
 require 'ttnt/testtask'
 
 Rake::TestTask.new(:test) do |t|
-  t.pattern = '*_test.rb'
+  t.pattern = '**/*_test.rb'
   TTNT::TestTask.new(t)
 end
 
